; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/source/fitz/extr_colorspace.c_fz_convert_color.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/source/fitz/extr_colorspace.c_fz_convert_color.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 (i32*, %struct.TYPE_5__*, float*, float*)* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @fz_convert_color(i32* %0, i32* %1, float* %2, i32* %3, float* %4, i32* %5, i32 %6) #0 {
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca float*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca float*, align 8
  %13 = alloca i32*, align 8
  %14 = alloca i32, align 4
  %15 = alloca %struct.TYPE_5__, align 8
  store i32* %0, i32** %8, align 8
  store i32* %1, i32** %9, align 8
  store float* %2, float** %10, align 8
  store i32* %3, i32** %11, align 8
  store float* %4, float** %12, align 8
  store i32* %5, i32** %13, align 8
  store i32 %6, i32* %14, align 4
  %16 = load i32*, i32** %8, align 8
  %17 = load i32*, i32** %9, align 8
  %18 = load i32*, i32** %11, align 8
  %19 = load i32*, i32** %13, align 8
  %20 = load i32, i32* %14, align 4
  %21 = call i32 @fz_find_color_converter(i32* %16, %struct.TYPE_5__* %15, i32* %17, i32* %18, i32* %19, i32 %20)
  %22 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %15, i32 0, i32 0
  %23 = load i32 (i32*, %struct.TYPE_5__*, float*, float*)*, i32 (i32*, %struct.TYPE_5__*, float*, float*)** %22, align 8
  %24 = load i32*, i32** %8, align 8
  %25 = load float*, float** %10, align 8
  %26 = load float*, float** %12, align 8
  %27 = call i32 %23(i32* %24, %struct.TYPE_5__* %15, float* %25, float* %26)
  %28 = load i32*, i32** %8, align 8
  %29 = call i32 @fz_drop_color_converter(i32* %28, %struct.TYPE_5__* %15)
  ret void
}

declare dso_local i32 @fz_find_color_converter(i32*, %struct.TYPE_5__*, i32*, i32*, i32*, i32) #1

declare dso_local i32 @fz_drop_color_converter(i32*, %struct.TYPE_5__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
